# CommonNNClustering

./: .bumpversion.cfg  .coverage  .coveragerc  .env  .gitignore  .gitmodules  .travis.yml  LICENSE  MANIFEST.in  Pipfile  README  README.md  TODO.md  matplotlibrc  pyproject.toml  requirements  requirements-dev.txt  requirements-docs.txt  requirements-optional.txt  requirements-test.txt  requirements-tests.txt  requirements.txt  setup.cfg  setup.py  tox.ini
CNN/cnn/: cnn.py
CNN/tests/: test.py
_benchmark/: bm_similarity.ipynb
_benchmark/snippets/: fits.py
cnn/: .gitignore  cnn.py
cnnclustering/: .nfs000000000034ec55000000fc  _cfits.c  _cfits.cpp  _cfits.pyx  _conversions.cpp  _conversions.pyx  _fits.py  _plots.py  cmsm.py  cnn.py
cnnclustering.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
core/: _cfits.c  _cfits.cpp  _cfits.pyx  _fits.py  _plots.py  cmsm.py  cnn.py
core/c/: cfit.c  cfit.pyx
deprecated/docs/: Makefile
docs/: .buildinfo  conf.py  genindex.html  index.html  index.rst  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_benchmark/: bm_similarity.html
docs/_source/: api_cluster.html  api_cmsm.html  api_cnn.html  api_cnnclustering.html  api_reference.html  api_types.html  install.html  install.rst  quickstart.html  tutorials.html  tutorials.rst
docs/_sources/: index.rst.txt
docs/benchmark/: bm.html  (+2 more)
docsrc/: conf.py  matplotlibrc
test/: conftest.backup  conftest.py
tests/: conftest.py  demo-detailed.ipynb  demo.ipynb  demo.py  test.ipynb  test.py
tutorial/: demo.ipynb  matplotlibrc  tutorial.ipynb
(+330 files in other folders)
