[build-system]
requires = [
    "setuptools>=40.8.0",
    "wheel",
    "cython>=0.29",
    "numpy>=1.19",
    ]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
norecursedirs = ".tox .git"
addopts = "-v -p no:warnings --doctest-glob='README.md' --ignore=setup.py -x"
testpaths = ["test"]
markers = [
    "sklearn: requires scikit-learn install"
    ]